# Aegisub

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: audio_controller.cpp  audio_controller.h  audio_timing_dialogue.cpp  base_grid.cpp  context.cpp  frame_main.cpp  frame_main.h  grid_warning_controller.cpp  grid_warning_controller.h  grid_warning_panel.cpp  grid_warning_panel.h  meson.build  preferences.cpp
src/include/aegisub/: context.h
src/libresrc/: default_config.json
src/libresrc/osx/: default_config.json
tools/: osx-bundle.sh  win-installer-setup.ps1
