cmake_minimum_required(VERSION 3.16)
project(Aegisub)

set(CMAKE_CXX_STANDARD 14)

include_directories(libaegisub/common)
include_directories(libaegisub/include)
include_directories(libaegisub/include/libaegisub)
include_directories(libaegisub/include/libaegisub/ass)
include_directories(libaegisub/include/libaegisub/audio)
include_directories(libaegisub/include/libaegisub/cajun)
include_directories(libaegisub/include/libaegisub/lua)
include_directories(libaegisub/lua/modules)
include_directories(src)
include_directories(src/command)
include_directories(src/gl)
include_directories(src/include)
include_directories(src/include/aegisub)
include_directories(src/libresrc)
include_directories(subprojects/csri/frontends/avisynth25)
include_directories(subprojects/csri/frontends/cmdline)
include_directories(subprojects/csri/include)
include_directories(subprojects/csri/include/csri)
include_directories(subprojects/csri/lib)
include_directories(subprojects/csri/lib/posix)
include_directories(subprojects/csri/lib/win32)
include_directories(subprojects/iconv/include)
include_directories(subprojects/iconv/libcharset)
include_directories(subprojects/iconv/libiconv)
include_directories(subprojects/packagefiles)
include_directories(subprojects/packagefiles/bestsource)
include_directories(subprojects/packagefiles/bestsource/libp2p)
include_directories(tests/support)
include_directories(vendor/luabins/src)
include_directories(vendor/luabins/test)

add_executable(Aegisub
    automation/tests/aegisub.cpp
    libaegisub/ass/dialogue_parser.cpp
    libaegisub/ass/time.cpp
    libaegisub/ass/uuencode.cpp
    libaegisub/audio/provider.cpp
    libaegisub/audio/provider_convert.cpp
    libaegisub/audio/provider_dummy.cpp
    libaegisub/audio/provider_hd.cpp
    libaegisub/audio/provider_lock.cpp
    libaegisub/audio/provider_pcm.cpp
    libaegisub/audio/provider_ram.cpp
    libaegisub/common/cajun/elements.cpp
    libaegisub/common/cajun/reader.cpp
    libaegisub/common/cajun/writer.cpp
    libaegisub/common/calltip_provider.cpp
    libaegisub/common/character_count.cpp
    libaegisub/common/charset.cpp
    libaegisub/common/charset_6937.cpp
    libaegisub/common/charset_6937.h
    libaegisub/common/charset_conv.cpp
    libaegisub/common/color.cpp
    libaegisub/common/dispatch.cpp
    libaegisub/common/file_mapping.cpp
    libaegisub/common/format.cpp
    libaegisub/common/fs.cpp
    libaegisub/common/hotkey.cpp
    libaegisub/common/io.cpp
    libaegisub/common/json.cpp
    libaegisub/common/kana_table.cpp
    libaegisub/common/karaoke_matcher.cpp
    libaegisub/common/keyframe.cpp
    libaegisub/common/line_iterator.cpp
    libaegisub/common/log.cpp
    libaegisub/common/mru.cpp
    libaegisub/common/option.cpp
    libaegisub/common/option_value.cpp
    libaegisub/common/parser.cpp
    libaegisub/common/parser.h
    libaegisub/common/path.cpp
    libaegisub/common/thesaurus.cpp
    libaegisub/common/util.cpp
    libaegisub/common/vfr.cpp
    libaegisub/common/ycbcr_conv.cpp
    libaegisub/include/libaegisub/ass/dialogue_parser.h
    libaegisub/include/libaegisub/ass/smpte.h
    libaegisub/include/libaegisub/ass/time.h
    libaegisub/include/libaegisub/ass/uuencode.h
    libaegisub/include/libaegisub/audio/provider.h
    libaegisub/include/libaegisub/cajun/elements.h
    libaegisub/include/libaegisub/cajun/reader.h
    libaegisub/include/libaegisub/cajun/visitor.h
    libaegisub/include/libaegisub/cajun/writer.h
    libaegisub/include/libaegisub/lua/ffi.h
    libaegisub/include/libaegisub/lua/modules.h
    libaegisub/include/libaegisub/lua/script_reader.h
    libaegisub/include/libaegisub/lua/utils.h
    libaegisub/include/libaegisub/access.h
    libaegisub/include/libaegisub/address_of_adaptor.h
    libaegisub/include/libaegisub/background_runner.h
    libaegisub/include/libaegisub/calltip_provider.h
    libaegisub/include/libaegisub/character_count.h
    libaegisub/include/libaegisub/charset.h
    libaegisub/include/libaegisub/charset_conv.h
    libaegisub/include/libaegisub/charset_conv_win.h
    libaegisub/include/libaegisub/color.h
    libaegisub/include/libaegisub/dispatch.h
    libaegisub/include/libaegisub/exception.h
    libaegisub/include/libaegisub/file_mapping.h
    libaegisub/include/libaegisub/format.h
    libaegisub/include/libaegisub/format_flyweight.h
    libaegisub/include/libaegisub/format_path.h
    libaegisub/include/libaegisub/fs.h
    libaegisub/include/libaegisub/fs_fwd.h
    libaegisub/include/libaegisub/hotkey.h
    libaegisub/include/libaegisub/io.h
    libaegisub/include/libaegisub/json.h
    libaegisub/include/libaegisub/kana_table.h
    libaegisub/include/libaegisub/karaoke_matcher.h
    libaegisub/include/libaegisub/keyframe.h
    libaegisub/include/libaegisub/line_iterator.h
    libaegisub/include/libaegisub/line_wrap.h
    libaegisub/include/libaegisub/log.h
    libaegisub/include/libaegisub/make_unique.h
    libaegisub/include/libaegisub/mru.h
    libaegisub/include/libaegisub/of_type_adaptor.h
    libaegisub/include/libaegisub/option.h
    libaegisub/include/libaegisub/option_value.h
    libaegisub/include/libaegisub/owning_intrusive_list.h
    libaegisub/include/libaegisub/path.h
    libaegisub/include/libaegisub/scoped_ptr.h
    libaegisub/include/libaegisub/signal.h
    libaegisub/include/libaegisub/spellchecker.h
    libaegisub/include/libaegisub/split.h
    libaegisub/include/libaegisub/thesaurus.h
    libaegisub/include/libaegisub/type_name.h
    libaegisub/include/libaegisub/util.h
    libaegisub/include/libaegisub/util_osx.h
    libaegisub/include/libaegisub/vfr.h
    libaegisub/include/libaegisub/ycbcr_conv.h
    libaegisub/include/lagi_pre.h
    libaegisub/include/lagi_pre_c.h
    libaegisub/lua/modules/lfs.cpp
    libaegisub/lua/modules/lpeg.c
    libaegisub/lua/modules/lpeg.h
    libaegisub/lua/modules/re.cpp
    libaegisub/lua/modules/unicode.cpp
    libaegisub/lua/modules.cpp
    libaegisub/lua/script_reader.cpp
    libaegisub/lua/utils.cpp
    libaegisub/osx/dispatch.mm
    libaegisub/osx/spellchecker.mm
    libaegisub/osx/util.mm
    libaegisub/unix/access.cpp
    libaegisub/unix/fs.cpp
    libaegisub/unix/log.cpp
    libaegisub/unix/path.cpp
    libaegisub/unix/util.cpp
    libaegisub/windows/access.cpp
    libaegisub/windows/charset_conv_win.cpp
    libaegisub/windows/fs.cpp
    libaegisub/windows/log_win.cpp
    libaegisub/windows/path_win.cpp
    libaegisub/windows/util_win.cpp
    src/command/app.cpp
    src/command/audio.cpp
    src/command/automation.cpp
    src/command/command.cpp
    src/command/command.h
    src/command/edit.cpp
    src/command/grid.cpp
    src/command/help.cpp
    src/command/keyframe.cpp
    src/command/recent.cpp
    src/command/subtitle.cpp
    src/command/time.cpp
    src/command/timecode.cpp
    src/command/tool.cpp
    src/command/video.cpp
    src/command/vis_tool.cpp
    src/gl/glext.h
    src/include/aegisub/audio_player.h
    src/include/aegisub/context.h
    src/include/aegisub/hotkey.h
    src/include/aegisub/menu.h
    src/include/aegisub/spellchecker.h
    src/include/aegisub/subtitles_provider.h
    src/include/aegisub/toolbar.h
    src/include/aegisub/video_provider.h
    src/include/agi_pre.h
    src/include/agi_pre_c.h
    src/libresrc/libresrc.cpp
    src/libresrc/libresrc.h
    src/osx/osx_utils.mm
    src/osx/retina_helper.mm
    src/aegisublocale.cpp
    src/aegisublocale.h
    src/ass_attachment.cpp
    src/ass_attachment.h
    src/ass_dialogue.cpp
    src/ass_dialogue.h
    src/ass_entry.cpp
    src/ass_entry.h
    src/ass_export_filter.cpp
    src/ass_export_filter.h
    src/ass_exporter.cpp
    src/ass_exporter.h
    src/ass_file.cpp
    src/ass_file.h
    src/ass_info.h
    src/ass_karaoke.cpp
    src/ass_karaoke.h
    src/ass_override.cpp
    src/ass_override.h
    src/ass_parser.cpp
    src/ass_parser.h
    src/ass_style.cpp
    src/ass_style.h
    src/ass_style_storage.cpp
    src/ass_style_storage.h
    src/async_video_provider.cpp
    src/async_video_provider.h
    src/audio_box.cpp
    src/audio_box.h
    src/audio_colorscheme.cpp
    src/audio_colorscheme.h
    src/audio_controller.cpp
    src/audio_controller.h
    src/audio_display.cpp
    src/audio_display.h
    src/audio_karaoke.cpp
    src/audio_karaoke.h
    src/audio_marker.cpp
    src/audio_marker.h
    src/audio_player.cpp
    src/audio_player_alsa.cpp
    src/audio_player_dsound.cpp
    src/audio_player_dsound2.cpp
    src/audio_player_openal.cpp
    src/audio_player_oss.cpp
    src/audio_player_portaudio.cpp
    src/audio_player_portaudio.h
    src/audio_player_pulse.cpp
    src/audio_player_xaudio2.cpp
    src/audio_provider_avs.cpp
    src/audio_provider_bestsource.cpp
    src/audio_provider_factory.cpp
    src/audio_provider_factory.h
    src/audio_provider_ffmpegsource.cpp
    src/audio_provider_vs.cpp
    src/audio_renderer.cpp
    src/audio_renderer.h
    src/audio_renderer_spectrum.cpp
    src/audio_renderer_spectrum.h
    src/audio_renderer_waveform.cpp
    src/audio_renderer_waveform.h
    src/audio_rendering_style.h
    src/audio_timing.h
    src/audio_timing_dialogue.cpp
    src/audio_timing_karaoke.cpp
    src/auto4_base.cpp
    src/auto4_base.h
    src/auto4_lua.cpp
    src/auto4_lua.h
    src/auto4_lua_assfile.cpp
    src/auto4_lua_dialog.cpp
    src/auto4_lua_factory.h
    src/auto4_lua_progresssink.cpp
    src/avisynth_wrap.cpp
    src/avisynth_wrap.h
    src/base_grid.cpp
    src/base_grid.h
    src/bestsource_common.cpp
    src/bestsource_common.h
    src/block_cache.h
    src/charset_detect.cpp
    src/charset_detect.h
    src/colorspace.cpp
    src/colorspace.h
    src/colour_button.cpp
    src/colour_button.h
    src/compat.cpp
    src/compat.h
    src/context.cpp
    src/crash_writer.cpp
    src/crash_writer.h
    src/crash_writer_minidump.cpp
    src/dialog_about.cpp
    src/dialog_align.cpp
    src/dialog_attachments.cpp
    src/dialog_automation.cpp
    src/dialog_autosave.cpp
    src/dialog_colorpicker.cpp
    src/dialog_detached_video.cpp
    src/dialog_detached_video.h
    src/dialog_dummy_video.cpp
    src/dialog_export.cpp
    src/dialog_export_ebu3264.cpp
    src/dialog_export_ebu3264.h
    src/dialog_fonts_collector.cpp
    src/dialog_jumpto.cpp
    src/dialog_kara_timing_copy.cpp
    src/dialog_log.cpp
    src/dialog_manager.h
    src/dialog_paste_over.cpp
    src/dialog_paste_over.h
    src/dialog_progress.cpp
    src/dialog_progress.h
    src/dialog_properties.cpp
    src/dialog_resample.cpp
    src/dialog_search_replace.cpp
    src/dialog_search_replace.h
    src/dialog_selected_choices.cpp
    src/dialog_selection.cpp
    src/dialog_shift_times.cpp
    src/dialog_spellchecker.cpp
    src/dialog_style_editor.cpp
    src/dialog_style_editor.h
    src/dialog_style_manager.cpp
    src/dialog_styling_assistant.cpp
    src/dialog_styling_assistant.h
    src/dialog_text_import.cpp
    src/dialog_timing_processor.cpp
    src/dialog_translation.cpp
    src/dialog_translation.h
    src/dialog_version_check.cpp
    src/dialog_video_details.cpp
    src/dialog_video_properties.cpp
    src/dialogs.h
    src/export_fixstyle.cpp
    src/export_fixstyle.h
    src/export_framerate.cpp
    src/export_framerate.h
    src/factory_manager.h
    src/ffmpegsource_common.cpp
    src/ffmpegsource_common.h
    src/fft.cpp
    src/fft.h
    src/flyweight_hash.h
    src/fold_controller.cpp
    src/fold_controller.h
    src/font_file_lister.cpp
    src/font_file_lister.h
    src/font_file_lister_coretext.mm
    src/font_file_lister_fontconfig.cpp
    src/font_file_lister_gdi.cpp
    src/format.h
    src/frame_main.cpp
    src/frame_main.h
    src/gl_text.cpp
    src/gl_text.h
    src/gl_wrap.cpp
    src/gl_wrap.h
    src/grid_column.cpp
    src/grid_column.h
    src/grid_warning_panel.cpp
    src/grid_warning_panel.h
    src/help_button.cpp
    src/help_button.h
    src/hotkey.cpp
    src/hotkey_data_view_model.cpp
    src/hotkey_data_view_model.h
    src/image_position_picker.cpp
    src/image_position_picker.h
    src/initial_line_state.cpp
    src/initial_line_state.h
    src/libass_gdi_fontselect.cpp
    src/main.cpp
    src/main.h
    src/MatroskaParser.c
    src/MatroskaParser.h
    src/menu.cpp
    src/mkv_wrap.cpp
    src/mkv_wrap.h
    src/options.h
    src/pen.cpp
    src/pen.h
    src/persist_location.cpp
    src/persist_location.h
    src/placeholder_ctrl.h
    src/preferences.cpp
    src/preferences.h
    src/preferences_base.cpp
    src/preferences_base.h
    src/project.cpp
    src/project.h
    src/resolution_resampler.cpp
    src/resolution_resampler.h
    src/retina_helper.h
    src/search_replace_engine.cpp
    src/search_replace_engine.h
    src/selection_controller.cpp
    src/selection_controller.h
    src/spellchecker.cpp
    src/spellchecker_hunspell.cpp
    src/spellchecker_hunspell.h
    src/spline.cpp
    src/spline.h
    src/spline_curve.cpp
    src/spline_curve.h
    src/string_codec.cpp
    src/string_codec.h
    src/subs_controller.cpp
    src/subs_controller.h
    src/subs_edit_box.cpp
    src/subs_edit_box.h
    src/subs_edit_ctrl.cpp
    src/subs_edit_ctrl.h
    src/subs_preview.cpp
    src/subs_preview.h
    src/subtitle_format.cpp
    src/subtitle_format.h
    src/subtitle_format_ass.cpp
    src/subtitle_format_ass.h
    src/subtitle_format_ebu3264.cpp
    src/subtitle_format_ebu3264.h
    src/subtitle_format_encore.cpp
    src/subtitle_format_encore.h
    src/subtitle_format_microdvd.cpp
    src/subtitle_format_microdvd.h
    src/subtitle_format_mkv.cpp
    src/subtitle_format_mkv.h
    src/subtitle_format_srt.cpp
    src/subtitle_format_srt.h
    src/subtitle_format_ssa.cpp
    src/subtitle_format_ssa.h
    src/subtitle_format_transtation.cpp
    src/subtitle_format_transtation.h
    src/subtitle_format_ttxt.cpp
    src/subtitle_format_ttxt.h
    src/subtitle_format_txt.cpp
    src/subtitle_format_txt.h
    src/subtitles_provider.cpp
    src/subtitles_provider_csri.cpp
    src/subtitles_provider_csri.h
    src/subtitles_provider_libass.cpp
    src/subtitles_provider_libass.h
    src/text_file_reader.cpp
    src/text_file_reader.h
    src/text_file_writer.cpp
    src/text_file_writer.h
    src/text_selection_controller.cpp
    src/text_selection_controller.h
    src/thesaurus.cpp
    src/thesaurus.h
    src/time_range.h
    src/timeedit_ctrl.cpp
    src/timeedit_ctrl.h
    src/toggle_bitmap.cpp
    src/toggle_bitmap.h
    src/toolbar.cpp
    src/tooltip_manager.cpp
    src/tooltip_manager.h
    src/utils.cpp
    src/utils.h
    src/validators.cpp
    src/validators.h
    src/value_event.h
    src/vapoursynth_common.cpp
    src/vapoursynth_common.h
    src/vapoursynth_wrap.cpp
    src/vapoursynth_wrap.h
    src/vector2d.cpp
    src/vector2d.h
    src/vector3d.cpp
    src/vector3d.h
    src/version.cpp
    src/version.h
    src/video_box.cpp
    src/video_box.h
    src/video_controller.cpp
    src/video_controller.h
    src/video_display.cpp
    src/video_display.h
    src/video_frame.cpp
    src/video_frame.h
    src/video_out_gl.cpp
    src/video_out_gl.h
    src/video_provider_avs.cpp
    src/video_provider_bestsource.cpp
    src/video_provider_cache.cpp
    src/video_provider_dummy.cpp
    src/video_provider_dummy.h
    src/video_provider_ffmpegsource.cpp
    src/video_provider_manager.cpp
    src/video_provider_manager.h
    src/video_provider_vs.cpp
    src/video_provider_yuv4mpeg.cpp
    src/video_slider.cpp
    src/video_slider.h
    src/visual_feature.cpp
    src/visual_feature.h
    src/visual_tool.cpp
    src/visual_tool.h
    src/visual_tool_clip.cpp
    src/visual_tool_clip.h
    src/visual_tool_cross.cpp
    src/visual_tool_cross.h
    src/visual_tool_drag.cpp
    src/visual_tool_drag.h
    src/visual_tool_perspective.cpp
    src/visual_tool_perspective.h
    src/visual_tool_rotatexy.cpp
    src/visual_tool_rotatexy.h
    src/visual_tool_rotatez.cpp
    src/visual_tool_rotatez.h
    src/visual_tool_scale.cpp
    src/visual_tool_scale.h
    src/visual_tool_vector_clip.cpp
    src/visual_tool_vector_clip.h
    subprojects/csri/backends/libass/libass_csri.c
    subprojects/csri/frontends/avisynth25/avisynth.cpp
    subprojects/csri/frontends/avisynth25/avisynth.h
    subprojects/csri/frontends/cmdline/cmdmain.c
    subprojects/csri/frontends/cmdline/render.c
    subprojects/csri/frontends/cmdline/render.h
    subprojects/csri/include/csri/csri.h
    subprojects/csri/include/csri/fmtids.h
    subprojects/csri/include/csri/logging.h
    subprojects/csri/include/csri/openerr.h
    subprojects/csri/include/csri/stream.h
    subprojects/csri/include/subhelp.h
    subprojects/csri/include/visibility.h
    subprojects/csri/lib/posix/csrilib_os.h
    subprojects/csri/lib/posix/enumerate.c
    subprojects/csri/lib/win32/csrilib_os.h
    subprojects/csri/lib/win32/enumerate.c
    subprojects/csri/lib/csrilib.h
    subprojects/csri/lib/list.c
    subprojects/csri/lib/wrap.c
    subprojects/csri/subhelp/posix/openfile.c
    subprojects/csri/subhelp/win32/openfile.c
    subprojects/csri/subhelp/logging.c
    subprojects/iconv/include/iconv.h
    subprojects/iconv/include/libcharset.h
    subprojects/iconv/include/localcharset.h
    subprojects/iconv/include/stdbool.h
    subprojects/iconv/libcharset/config.h
    subprojects/iconv/libcharset/localcharset.c
    subprojects/iconv/libcharset/relocatable.c
    subprojects/iconv/libcharset/relocatable.h
    subprojects/iconv/libiconv/aliases.h
    subprojects/iconv/libiconv/aliases2.h
    subprojects/iconv/libiconv/aliases_aix.h
    subprojects/iconv/libiconv/aliases_aix_sysaix.h
    subprojects/iconv/libiconv/aliases_dos.h
    subprojects/iconv/libiconv/aliases_extra.h
    subprojects/iconv/libiconv/aliases_osf1.h
    subprojects/iconv/libiconv/aliases_osf1_sysosf1.h
    subprojects/iconv/libiconv/aliases_sysaix.h
    subprojects/iconv/libiconv/aliases_syshpux.h
    subprojects/iconv/libiconv/aliases_sysosf1.h
    subprojects/iconv/libiconv/aliases_syssolaris.h
    subprojects/iconv/libiconv/armscii_8.h
    subprojects/iconv/libiconv/ascii.h
    subprojects/iconv/libiconv/atarist.h
    subprojects/iconv/libiconv/big5.h
    subprojects/iconv/libiconv/big5_2003.h
    subprojects/iconv/libiconv/big5hkscs1999.h
    subprojects/iconv/libiconv/big5hkscs2001.h
    subprojects/iconv/libiconv/big5hkscs2004.h
    subprojects/iconv/libiconv/c99.h
    subprojects/iconv/libiconv/canonical.h
    subprojects/iconv/libiconv/canonical_aix.h
    subprojects/iconv/libiconv/canonical_aix_sysaix.h
    subprojects/iconv/libiconv/canonical_dos.h
    subprojects/iconv/libiconv/canonical_extra.h
    subprojects/iconv/libiconv/canonical_local.h
    subprojects/iconv/libiconv/canonical_local_sysaix.h
    subprojects/iconv/libiconv/canonical_local_syshpux.h
    subprojects/iconv/libiconv/canonical_local_sysosf1.h
    subprojects/iconv/libiconv/canonical_local_syssolaris.h
    subprojects/iconv/libiconv/canonical_osf1.h
    subprojects/iconv/libiconv/canonical_osf1_sysosf1.h
    subprojects/iconv/libiconv/canonical_sysaix.h
    subprojects/iconv/libiconv/canonical_syshpux.h
    subprojects/iconv/libiconv/canonical_sysosf1.h
    subprojects/iconv/libiconv/canonical_syssolaris.h
    subprojects/iconv/libiconv/ces_big5.h
    subprojects/iconv/libiconv/ces_gbk.h
    subprojects/iconv/libiconv/cjk_variants.h
    subprojects/iconv/libiconv/cns11643.h
    subprojects/iconv/libiconv/cns11643_1.h
    subprojects/iconv/libiconv/cns11643_15.h
    subprojects/iconv/libiconv/cns11643_2.h
    subprojects/iconv/libiconv/cns11643_3.h
    subprojects/iconv/libiconv/cns11643_4.h
    subprojects/iconv/libiconv/cns11643_4a.h
    subprojects/iconv/libiconv/cns11643_4b.h
    subprojects/iconv/libiconv/cns11643_5.h
    subprojects/iconv/libiconv/cns11643_6.h
    subprojects/iconv/libiconv/cns11643_7.h
    subprojects/iconv/libiconv/cns11643_inv.h
    subprojects/iconv/libiconv/config.h
    subprojects/iconv/libiconv/converters.h
    subprojects/iconv/libiconv/cp1046.h
    subprojects/iconv/libiconv/cp1124.h
    subprojects/iconv/libiconv/cp1125.h
    subprojects/iconv/libiconv/cp1129.h
    subprojects/iconv/libiconv/cp1131.h
    subprojects/iconv/libiconv/cp1133.h
    subprojects/iconv/libiconv/cp1161.h
    subprojects/iconv/libiconv/cp1162.h
    subprojects/iconv/libiconv/cp1163.h
    subprojects/iconv/libiconv/cp1250.h
    subprojects/iconv/libiconv/cp1251.h
    subprojects/iconv/libiconv/cp1252.h
    subprojects/iconv/libiconv/cp1253.h
    subprojects/iconv/libiconv/cp1254.h
    subprojects/iconv/libiconv/cp1255.h
    subprojects/iconv/libiconv/cp1256.h
    subprojects/iconv/libiconv/cp1257.h
    subprojects/iconv/libiconv/cp1258.h
    subprojects/iconv/libiconv/cp437.h
    subprojects/iconv/libiconv/cp737.h
    subprojects/iconv/libiconv/cp775.h
    subprojects/iconv/libiconv/cp850.h
    subprojects/iconv/libiconv/cp852.h
    subprojects/iconv/libiconv/cp853.h
    subprojects/iconv/libiconv/cp855.h
    subprojects/iconv/libiconv/cp856.h
    subprojects/iconv/libiconv/cp857.h
    subprojects/iconv/libiconv/cp858.h
    subprojects/iconv/libiconv/cp860.h
    subprojects/iconv/libiconv/cp861.h
    subprojects/iconv/libiconv/cp862.h
    subprojects/iconv/libiconv/cp863.h
    subprojects/iconv/libiconv/cp864.h
    subprojects/iconv/libiconv/cp865.h
    subprojects/iconv/libiconv/cp866.h
    subprojects/iconv/libiconv/cp869.h
    subprojects/iconv/libiconv/cp874.h
    subprojects/iconv/libiconv/cp922.h
    subprojects/iconv/libiconv/cp932.h
    subprojects/iconv/libiconv/cp932ext.h
    subprojects/iconv/libiconv/cp936.h
    subprojects/iconv/libiconv/cp936ext.h
    subprojects/iconv/libiconv/cp943.h
    subprojects/iconv/libiconv/cp949.h
    subprojects/iconv/libiconv/cp950.h
    subprojects/iconv/libiconv/cp950ext.h
    subprojects/iconv/libiconv/dec_hanyu.h
    subprojects/iconv/libiconv/dec_kanji.h
    subprojects/iconv/libiconv/euc_cn.h
    subprojects/iconv/libiconv/euc_jisx0213.h
    subprojects/iconv/libiconv/euc_jp.h
    subprojects/iconv/libiconv/euc_kr.h
    subprojects/iconv/libiconv/euc_tw.h
    subprojects/iconv/libiconv/flags.h
    subprojects/iconv/libiconv/flushwc.h
    subprojects/iconv/libiconv/gb12345.h
    subprojects/iconv/libiconv/gb12345ext.h
    subprojects/iconv/libiconv/gb18030.h
    subprojects/iconv/libiconv/gb18030ext.h
    subprojects/iconv/libiconv/gb18030uni.h
    subprojects/iconv/libiconv/gb2312.h
    subprojects/iconv/libiconv/gbk.h
    subprojects/iconv/libiconv/gbkext1.h
    subprojects/iconv/libiconv/gbkext2.h
    subprojects/iconv/libiconv/gbkext_inv.h
    subprojects/iconv/libiconv/genaliases.c
    subprojects/iconv/libiconv/genaliases2.c
    subprojects/iconv/libiconv/genflags.c
    subprojects/iconv/libiconv/gentranslit.c
    subprojects/iconv/libiconv/georgian_academy.h
    subprojects/iconv/libiconv/georgian_ps.h
    subprojects/iconv/libiconv/hkscs1999.h
    subprojects/iconv/libiconv/hkscs2001.h
    subprojects/iconv/libiconv/hkscs2004.h
    subprojects/iconv/libiconv/hp_roman8.h
    subprojects/iconv/libiconv/hz.h
    subprojects/iconv/libiconv/iconv.c
    subprojects/iconv/libiconv/iconv_open1.h
    subprojects/iconv/libiconv/iconv_open2.h
    subprojects/iconv/libiconv/iso2022_cn.h
    subprojects/iconv/libiconv/iso2022_cnext.h
    subprojects/iconv/libiconv/iso2022_jp.h
    subprojects/iconv/libiconv/iso2022_jp1.h
    subprojects/iconv/libiconv/iso2022_jp2.h
    subprojects/iconv/libiconv/iso2022_jp3.h
    subprojects/iconv/libiconv/iso2022_kr.h
    subprojects/iconv/libiconv/iso646_cn.h
    subprojects/iconv/libiconv/iso646_jp.h
    subprojects/iconv/libiconv/iso8859_1.h
    subprojects/iconv/libiconv/iso8859_10.h
    subprojects/iconv/libiconv/iso8859_11.h
    subprojects/iconv/libiconv/iso8859_13.h
    subprojects/iconv/libiconv/iso8859_14.h
    subprojects/iconv/libiconv/iso8859_15.h
    subprojects/iconv/libiconv/iso8859_16.h
    subprojects/iconv/libiconv/iso8859_2.h
    subprojects/iconv/libiconv/iso8859_3.h
    subprojects/iconv/libiconv/iso8859_4.h
    subprojects/iconv/libiconv/iso8859_5.h
    subprojects/iconv/libiconv/iso8859_6.h
    subprojects/iconv/libiconv/iso8859_7.h
    subprojects/iconv/libiconv/iso8859_8.h
    subprojects/iconv/libiconv/iso8859_9.h
    subprojects/iconv/libiconv/isoir165.h
    subprojects/iconv/libiconv/isoir165ext.h
    subprojects/iconv/libiconv/java.h
    subprojects/iconv/libiconv/jisx0201.h
    subprojects/iconv/libiconv/jisx0208.h
    subprojects/iconv/libiconv/jisx0212.h
    subprojects/iconv/libiconv/jisx0213.h
    subprojects/iconv/libiconv/johab.h
    subprojects/iconv/libiconv/johab_hangul.h
    subprojects/iconv/libiconv/koi8_r.h
    subprojects/iconv/libiconv/koi8_ru.h
    subprojects/iconv/libiconv/koi8_t.h
    subprojects/iconv/libiconv/koi8_u.h
    subprojects/iconv/libiconv/ksc5601.h
    subprojects/iconv/libiconv/libcharset.h
    subprojects/iconv/libiconv/localcharset.h
    subprojects/iconv/libiconv/loop_unicode.h
    subprojects/iconv/libiconv/loop_wchar.h
    subprojects/iconv/libiconv/loops.h
    subprojects/iconv/libiconv/mac_arabic.h
    subprojects/iconv/libiconv/mac_centraleurope.h
    subprojects/iconv/libiconv/mac_croatian.h
    subprojects/iconv/libiconv/mac_cyrillic.h
    subprojects/iconv/libiconv/mac_greek.h
    subprojects/iconv/libiconv/mac_hebrew.h
    subprojects/iconv/libiconv/mac_iceland.h
    subprojects/iconv/libiconv/mac_roman.h
    subprojects/iconv/libiconv/mac_romania.h
    subprojects/iconv/libiconv/mac_thai.h
    subprojects/iconv/libiconv/mac_turkish.h
    subprojects/iconv/libiconv/mac_ukraine.h
    subprojects/iconv/libiconv/mulelao.h
    subprojects/iconv/libiconv/nextstep.h
    subprojects/iconv/libiconv/pt154.h
    subprojects/iconv/libiconv/relocatable.c
    subprojects/iconv/libiconv/relocatable.h
    subprojects/iconv/libiconv/riscos1.h
    subprojects/iconv/libiconv/rk1048.h
    subprojects/iconv/libiconv/shift_jisx0213.h
    subprojects/iconv/libiconv/sjis.h
    subprojects/iconv/libiconv/tcvn.h
    subprojects/iconv/libiconv/tds565.h
    subprojects/iconv/libiconv/tis620.h
    subprojects/iconv/libiconv/translit.h
    subprojects/iconv/libiconv/ucs2.h
    subprojects/iconv/libiconv/ucs2be.h
    subprojects/iconv/libiconv/ucs2internal.h
    subprojects/iconv/libiconv/ucs2le.h
    subprojects/iconv/libiconv/ucs2swapped.h
    subprojects/iconv/libiconv/ucs4.h
    subprojects/iconv/libiconv/ucs4be.h
    subprojects/iconv/libiconv/ucs4internal.h
    subprojects/iconv/libiconv/ucs4le.h
    subprojects/iconv/libiconv/ucs4swapped.h
    subprojects/iconv/libiconv/uhc_1.h
    subprojects/iconv/libiconv/uhc_2.h
    subprojects/iconv/libiconv/utf16.h
    subprojects/iconv/libiconv/utf16be.h
    subprojects/iconv/libiconv/utf16le.h
    subprojects/iconv/libiconv/utf32.h
    subprojects/iconv/libiconv/utf32be.h
    subprojects/iconv/libiconv/utf32le.h
    subprojects/iconv/libiconv/utf7.h
    subprojects/iconv/libiconv/utf8.h
    subprojects/iconv/libiconv/vietcomb.h
    subprojects/iconv/libiconv/viscii.h
    subprojects/packagefiles/bestsource/libp2p/p2p_api.h
    tests/support/main.cpp
    tests/support/main.h
    tests/support/tests_pre.h
    tests/support/util.cpp
    tests/support/util.h
    tests/tests/access.cpp
    tests/tests/audio.cpp
    tests/tests/cajun.cpp
    tests/tests/calltip_provider.cpp
    tests/tests/character_count.cpp
    tests/tests/color.cpp
    tests/tests/dialogue_lexer.cpp
    tests/tests/format.cpp
    tests/tests/fs.cpp
    tests/tests/hotkey.cpp
    tests/tests/iconv.cpp
    tests/tests/ifind.cpp
    tests/tests/karaoke_matcher.cpp
    tests/tests/keyframe.cpp
    tests/tests/line_iterator.cpp
    tests/tests/line_wrap.cpp
    tests/tests/mru.cpp
    tests/tests/option.cpp
    tests/tests/path.cpp
    tests/tests/signals.cpp
    tests/tests/split.cpp
    tests/tests/syntax_highlight.cpp
    tests/tests/thesaurus.cpp
    tests/tests/time.cpp
    tests/tests/type_name.cpp
    tests/tests/util.cpp
    tests/tests/uuencode.cpp
    tests/tests/vfr.cpp
    tests/tests/word_split.cpp
    tools/osx-bundle-restart-helper.m
    tools/repack-thes-dict.cpp
    vendor/luabins/src/fwrite.c
    vendor/luabins/src/fwrite.h
    vendor/luabins/src/load.c
    vendor/luabins/src/luabins.c
    vendor/luabins/src/luabins.h
    vendor/luabins/src/luaheaders.h
    vendor/luabins/src/luainternals.c
    vendor/luabins/src/luainternals.h
    vendor/luabins/src/lualess.h
    vendor/luabins/src/save.c
    vendor/luabins/src/savebuffer.c
    vendor/luabins/src/savebuffer.h
    vendor/luabins/src/saveload.h
    vendor/luabins/src/write.c
    vendor/luabins/src/write.h
    vendor/luabins/test/test.c
    vendor/luabins/test/test.h
    vendor/luabins/test/test_api.c
    vendor/luabins/test/test_fwrite_api.c
    vendor/luabins/test/test_savebuffer.c
    vendor/luabins/test/test_write_api.c
    vendor/luabins/test/util.c
    vendor/luabins/test/util.h)
